project(monotonic_darwin C)
cmake_minimum_required(VERSION 2.4)

if(APPLE)
    set(CMAKE_OSX_ARCHITECTURES "i386" "x86_64")
    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.0")
    add_library(monotonic_time SHARED darwin.c)
endif(APPLE)
set(CMAKE_MODULE_PATH "${CMAKE_BINARY_DIR}")
include("VERSION-FILE")
set(version "${VERSION}")
set(VERSION "__version__ = '${version}'")
configure_file(monotonic_time.py.in ${CMAKE_SOURCE_DIR}/build/monotonic_time.py @ONLY)
set(VERSION "    version='${version}',")
configure_file(setup.py.in ${CMAKE_SOURCE_DIR}/build/setup.py @ONLY)

message(STATUS "Do '(cd build && sudo python setup.py install ; )' to install the python module.")
