[tool.poetry]
name = "monotonic_time"
version = "2.1.0.dev1"
license = "MIT"
readme = "README.rst"
description = "monotonic time for Python 2 and 3, on Linux, OpenBSD, FreeBSD, macOS x86_64, and Windows."
authors = ["Gavin Beatty <public@gavinbeatty.com>"]
repository = "https://github.com/gavinbeatty/python-monotonic-time"
classifiers = [
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
keywords = ["monotonic", "time", "clock"]

[tool.poetry.dependencies]
python = ">= 2.4, < 4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
